<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/example_logo"
        />

    <TextView
        android:id="@+id/openUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:layout_marginTop="210dp"
        />

    <EditText
        android:id="@+id/usernameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uname"
        android:layout_below="@id/openUp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/usernameBox"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordBox"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:textSize="12sp"
        android:onClick="onSubmitClick"
        />

</RelativeLayout>