<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".optionsInterfaceActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/example_logo"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/companyHeader"
        android:onClick="onClickLogout"
        />

    <TextView
        android:id="@+id/companyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/companyName"
        android:gravity="center"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/companyHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showEmployees"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        android:onClick="showCustomers"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2"
        android:onClick="showOrders"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button3"
        android:onClick="showODetails"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="@id/button4"
        android:onClick="showParts"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintStart_toStartOf="@id/button5"
        android:onClick="addNewPerson"
        />

    <LinearLayout
        android:id="@+id/information"
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toTopOf="@id/button1"
        >

        <ListView
            android:id="@+id/firstLineup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25dp"
            />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>